Fix cards stretching

--- a/src/pages/CharacterInventory/index.scss
+++ b/src/pages/CharacterInventory/index.scss
@@ -305,7 +305,6 @@ $rahkshi-card-border: 2px;
   }
 
   &__image {
-    width: 100%;
     height: 120px;
   }
 
